--- a/client/tag.jade
+++ b/client/tag.jade
@@ -154,7 +154,7 @@ template(name='stack_tag')
                                 // +comments
                         
                         
-                        each question_answers
+                        each q_a
                             .ui.basic.segment(class=answer_class)
                                 if is_accepted 
                                     .ui.green.corner.attached.label.zoomer
