--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,11 +1,13 @@
 template(name='nav')
     // a.icon.ui.large.circular.icon.button(href='/')
-    .ui.fluid.attached.small.seven.item.borderless.grey.menu.topnav
+    .ui.fluid.attached.small.nine.item.borderless.grey.menu.topnav
         // a.icon.header.item.pointer.toggle_leftbar
         //     i.bars.large.grey.icon
         if connected
             a.icon.disabled.item.goto_vid(href='/vid')
                 i.large.video.grey.icon
+            a.icon.disabled.item.goto_vid(href='/wikipedia')
+                i.large.wikipedia.grey.icon
             a.icon.zoomer.item.goto_people(href='/people' class="{{isActivePath regex='people'}}" title='people')
                 i.large.user.outline.grey.icon
             a.icon.zoomer.item.clear_tags.goto_stack(href='/stack' class="{{isActivePath '/stack'}}" title='stack exchange')
@@ -15,6 +17,8 @@ template(name='nav')
                     i.big.yin.yang.grey.loading.icon
                 else
                     i.big.yin.yang.grey.icon
+            a.icon.disabled.item.goto_vid(href='/pics')
+                i.large.picture.grey.icon
             a.icon.disabled.item.goto_vid(href='/github')
                 i.large.grey.github.icon
             a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}" title='reddit')
