--- a/client/site.jade
+++ b/client/site.jade
@@ -9,13 +9,13 @@ template(name='sq')
                     .ui.left.icon.input
                         i.search.icon
                         input.search_site(type='text')
+                    if selected_tags
+                        // if many_tags
+                        //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
+                        //         i.remove.icon
+                        each selected_tags
+                            +unselect_tag
                     .smallscroll                    
-                        if selected_tags
-                            // if many_tags
-                            //     a#clear_tags.ui.black.invert.icon.compact.button.select_term
-                            //         i.remove.icon
-                            each selected_tags
-                                +unselect_tag
                         each site_tags
                             +stack_tag_selector
                     +skve k='view_emotions' v=true l="emotions" i='smile' ionly=false
@@ -47,42 +47,42 @@ template(name='sq')
                     div
                     .ui.inline.header #{q_count}
                     if skv_is 'sort_direction' 1
-                        .ui.icon.compact.circular.basic.tertiary.button.sort_down
+                        .ui.icon.compact.basic.tertiary.button.sort_down
                             i.caret.down.icon
                     else
-                        .ui.icon.compact.circular.basic.tertiary.button.sort_up
+                        .ui.icon.compact.basic.tertiary.button.sort_up
                             i.caret.up.icon
                     if skv_is 'view_bounties' 1
-                        .ui.compact.circular.black.button.unview_bounties
+                        .ui.compact.black.button.unview_bounties
                             i.hand.holding.heart.icon
                             | bounties
                     else
-                        .ui.compact.circular.basic.tertiary.button.view_bounties
+                        .ui.compact.basic.tertiary.button.view_bounties
                             i.hand.holding.heart.icon
                             | bounties
                     if skv_is 'view_unanswered' 1
-                        .ui.compact.circular.black.button.unview_unanswered
+                        .ui.compact.black.button.unview_unanswered
                             i.checkmark.icon
                             | unanswered
                     else
-                        .ui.compact.circular.basic.tertiary.button.view_unanswered
+                        .ui.compact.basic.tertiary.button.view_unanswered
                             i.question.icon
                             | unanswered
                     i.big.fire.link.icon
-                    .ui.compact.circular.basic.small.tertiary.button.limit_1
+                    .ui.compact.basic.small.tertiary.button.limit_1
                         |1
-                    .ui.compact.circular.basic.small.tertiary.button.limit_10
+                    .ui.compact.basic.small.tertiary.button.limit_10
                         |10
-                    .ui.icon.compact.large.circular.basic.small.tertiary.button.sort_timestamp
+                    .ui.icon.compact.large.basic.small.tertiary.button.sort_timestamp
                         i.clock.icon
-                    .ui.icon.compact.large.circular.basic.small.tertiary.button.set_points
+                    .ui.icon.compact.large.basic.small.tertiary.button.set_points
                         i.line.chart.icon
                     if skv_is 'view_detail' true
-                        .ui.black.circular.compact.icon.button.toggle_detail
+                        .ui.black.compact.icon.button.toggle_detail
                             i.list.large.icon
                             // |detail
                     else
-                        .ui.compact.circular.basic.large.icon.tertiary.button.toggle_detail
+                        .ui.compact.basic.large.icon.tertiary.button.toggle_detail
                             i.minus.large.icon
                             // |simple
                         // i.line.chart.icon
@@ -135,13 +135,16 @@ template(name='sq')
                             |&nbsp;
                         div.rounded(style="height:5px;width:{{to_percent avg_anger_score}}%;background-color:red" title="{{to_percent avg_anger_score}}% anger")
 
-                    a.ui.circular.compact.basic.large.button.say(href="/s/#{api_site_parameter}/users")
+                    a.ui.compact.basic.large.button.say(href="/s/#{api_site_parameter}/users")
                         i.large.users.icon
                         |users
+                    a.ui.compact.basic.large.button.say(href="/s/#{api_site_parameter}/privledges")
+                        i.large.edit.icon
+                        |privledges
                     |#{current_sentiment} sent
                     +alpha
                     +duck
-                    // a.ui.circular.icon.button(href='/')
+                    // a.ui.icon.button(href='/')
                     //     i.large.home.icon
                     // img.get_info.mobile.hidden.shadowed(src=high_resolution_icon_url )
                     // img(src=icon_url)
@@ -167,7 +170,7 @@ template(name='sq')
                             |{{commafy new_active_users}}
                             |active users
                         .item.say 
-                            i.grey.users.icon
+                            i.grey.user.outline.icon
                             |{{commafy total_users}} total users
                         .item.say 
                             i.grey.certificate.icon
@@ -213,13 +216,8 @@ template(name='s_q_item')
                 strong #{score}
                 if is_answered
                     i.green.checkmark.icon
-                // span
-                //     i.tag.grey.icon
-                //     |#{tags.length}
                 |!{title} 
             .spacer
-            // if skv_is 'view_detail' true
-            // i.tag.grey.icon
             unless skv_is 'view_detail' true
                 if watson.analyzed_text
                     span.pointer.view_question {{trunc watson.analyzed_text}}...
