--- a/client/nav.jade
+++ b/client/nav.jade
@@ -1,9 +1,9 @@
 template(name='nav')
     .ui.fluid.attached.small.nine.item.borderless.grey.menu.topnav
         if connected
-            a.icon.disabled.item.goto_vid(href='/vid')
+            a.icon.zoomer.item.goto_vid(href='/vids' class="{{isActivePath regex='vids'}}" title='videos')
                 i.large.video.grey.icon
-            a.icon.zoomer.item.goto_vid(href='/wiki')
+            a.icon.zoomer.item.goto_wiki(href='/wiki' class="{{isActivePath regex='wiki'}}" title='wikipedia')
                 i.large.wikipedia.grey.icon
             a.icon.zoomer.item.goto_people(href='/people' class="{{isActivePath regex='people'}}" title='people')
                 i.large.user.outline.grey.icon
@@ -14,9 +14,9 @@ template(name='nav')
                     i.big.yin.yang.grey.loading.icon
                 else
                     i.big.yin.yang.grey.icon
-            a.icon.disabled.item.goto_vid(href='/pics')
+            a.icon.zoomer.item.goto_vid(href='/pics' class="{{isActivePath regex='pics'}}" title='pics')
                 i.large.picture.grey.icon
-            a.icon.disabled.item.goto_vid(href='/github')
+            a.icon.zoomer.item.goto_vid(href='/github' class="{{isActivePath regex='github'}}" title='github')
                 i.large.grey.github.icon
             a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}" title='reddit')
                 i.large.reddit.grey.icon
