replace top emotions with avgs

--- a/client/nav.jade
+++ b/client/nav.jade
@@ -23,6 +23,6 @@ template(name='nav')
             a.icon.zoomer.item.silence(href='#')
                 i.large.volume.mute.grey.icon
         unless connected
-            // .item
+            .spacer
             i.yin.yang.grey.loading.big.icon
             +status    
