--- a/client/suser.jade
+++ b/client/suser.jade
@@ -28,6 +28,14 @@ template(name='suser_layout')
                         small(title='reputation') {{ commafy reputation }}
                     div
                     .ui.basic.label(class=sentiment_class) {{to_percent sentiment_avg}}% #{doc_sentiment_label}
+                    .ui.list
+                        .item {{ to_percent avg_sent_score}} sentiment
+                        .item {{ to_percent avg_joy_score}} joy
+                        .item {{ to_percent avg_anger_score}} anger
+                        .item {{ to_percent avg_sadness_score}} sadness
+                        .item {{ to_percent avg_disgust_score}} disgust
+                        .item {{ to_percent avg_fear_score}} fear
+
                     div
                     // .ui.green.label pos: {{to_percent sentiment_positive_avg}}%
                     // .ui.red.label neg: {{to_percent sentiment_negative_avg}}%
