top_suser emotions temp in susers

--- a/client/people.jade
+++ b/client/people.jade
@@ -110,10 +110,11 @@ template(name='p')
                                     .ui.small.tertiary.disabled.button #{this}
                                 if user_top_emotion
                                     .ui.inline.header #{user_top_emotion}
+                                +suser_top_emotions
                                 // if user_top_emotions
-                                each user_top_emotions
-                                    .ui.basic.label #{title}
-                                        small #{count}
+                                // each user_top_emotions
+                                //     .ui.basic.label #{title}
+                                //         small #{count}
                             
                                 
                                 
