--- a/client/susers.jade
+++ b/client/susers.jade
@@ -118,7 +118,8 @@ template(name='stackuser_item')
                     |#{website_url}
                 // .four.wide.center.aligned.column
                 //     .ui.header filter
-        
+            +suser_top_emotions
+
         
         
 template(name='term_image')
