--- a/client/site.jade
+++ b/client/site.jade
@@ -27,7 +27,6 @@ template(name='sq')
                             each site_emotions
                                 // +stack_tag_selector
                                 .ui.large.label(title=count) #{name}
-                            // .ui.large.label(title=count) #{name}
                     if site_person.count
                         +skve k='view_people' v=true l="people" i='users' ionly=false
                         if skv_is 'view_people' true
@@ -115,6 +114,10 @@ template(name='sq')
                                 |&nbsp;
                             div.rounded(style="height:5px;width:{{abs_percent doc_sentiment_score}}%;background-color:red" title="{{abs_percent doc_sentiment_score}}% #{doc_sentiment_label}")
                             
+                        span.say.ui.green.text(class="{{calculated_size avg_sent_score}}") {{ to_percent avg_sent_score }}% joy 
+                            |&nbsp;
+                        div.rounded(style="height:5px;width:{{to_percent avg_sent_score}}%;background-color:green" title="{{to_percent avg_sent_score}}% joy")
+              
                         span.say.ui.green.text(class="{{calculated_size avg_joy_score}}") {{ to_percent avg_joy_score }}% joy 
                             |&nbsp;
                         div.rounded(style="height:5px;width:{{to_percent avg_joy_score}}%;background-color:green" title="{{to_percent avg_joy_score}}% joy")
