--- a/client/ea.jade
+++ b/client/ea.jade
@@ -1,7 +1,12 @@
 template(name='ea')
-    .ui.header ea
-    a.ui.header(href="waste-carriers-brokers") Waste Carriers, Brokers and Dealers
-    a.ui.header(href="waste-carriers-brokers") Waste Exemptions	
-    a.ui.header(href="waste-carriers-brokers") Scrap Metal Dealers	
-    a.ui.header(href="waste-carriers-brokers") Enforcement Actions	
-    a.ui.header(href="waste-carriers-brokers") Water Quality Exemptions	
+    .ui.padded.stackable.grid
+        .four.wide.column
+            img.ui.medium.image.get_ea(src="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/organisation/logo/199/EA_logo_354.jpg")
+        .twelve.wide.column
+            a.ui.basic.button(href="waste-carriers-brokers") Waste Carriers, Brokers and Dealers
+            a.ui.basic.button(href="waste-carriers-brokers") Waste Exemptions	
+            a.ui.basic.button(href="waste-carriers-brokers") Scrap Metal Dealers	
+            a.ui.basic.button(href="waste-carriers-brokers") Enforcement Actions	
+            a.ui.basic.button(href="waste-carriers-brokers") Water Quality Exemptions	
+            a.ui.basic.button(href="waste-carriers-brokers") Environmental Permitting Regulations – Radioactive Substances		
+            a.ui.basic.button(href="waste-carriers-brokers") Environmental Permitting Regulations – Installations			
