working import, check for found and show in client

--- a/client/ea.jade
+++ b/client/ea.jade
@@ -10,3 +10,6 @@ template(name='ea')
             a.ui.basic.button(href="waste-carriers-brokers") Water Quality Exemptions	
             a.ui.basic.button(href="waste-carriers-brokers") Environmental Permitting Regulations – Radioactive Substances		
             a.ui.basic.button(href="waste-carriers-brokers") Environmental Permitting Regulations – Installations			
+            each ea_docs
+                with edata
+                    .ui.header #{holder.name}
