--- a/client/nav.jade
+++ b/client/nav.jade
@@ -3,7 +3,7 @@ template(name='nav')
         if connected
             // a.icon.zoomer.item.goto_vid(href='/vids' class="{{isActivePath regex='vids'}}" title='videos')
             //     i.large.video.grey.icon
-            a.icon.zoomer.item.goto_nature(href='/ea' class="{{isActivePath regex='ea'}}" title='ea')
+            a.icon.zoomer.item.goto_ea(href='/ea' class="{{isActivePath regex='ea'}}" title='ea')
                 i.large.green.tree.icon
                 // img(src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.glassdoor.com%2Fsqll%2F139670%2Fenvironment-agency-squarelogo.png&f=1&nofb=1")
             // a.icon.zoomer.item.goto_wiki(href='/wiki' class="{{isActivePath regex='wiki'}}" title='wikipedia')
