--- a/client/nav.jade
+++ b/client/nav.jade
@@ -14,9 +14,9 @@ template(name='nav')
                 i.large.stack.exchange.grey.icon
             a.icon.zoomer.item.clear_tags.goto_dao(href='/' class="{{isActivePath '/'}}" title='search')
                 if skv_is 'loading' true
-                    i.big.yin.yang.grey.loading.icon
+                    i.large.yin.yang.grey.loading.icon
                 else
-                    i.big.yin.yang.grey.icon
+                    i.large.yin.yang.grey.icon
             // a.icon.zoomer.item.goto_vid(href='/pics' class="{{isActivePath regex='pics'}}" title='pics')
             //     i.large.picture.grey.icon
             // a.icon.zoomer.item.goto_vid(href='/github' class="{{isActivePath regex='github'}}" title='github')
