v1 call_ea template calling each register

--- a/client/ea.jade
+++ b/client/ea.jade
@@ -2,14 +2,21 @@ template(name='ea')
     .ui.stackable.grid
         .four.wide.column
             img.ui.medium.image.get_ea(src="https://assets.publishing.service.gov.uk/government/uploads/system/uploads/organisation/logo/199/EA_logo_354.jpg")
-            .ui.basic.compact.button Waste Carriers, Brokers and Dealers
-            .ui.basic.compact.button Waste Exemptions	
-            .ui.basic.compact.button Scrap Metal Dealers	
-            .ui.basic.compact.button Enforcement Actions
-            .ui.basic.compact.button Water Quality Exemptions	
-            .ui.basic.compact.button Environmental Permitting Regulations – Radioactive Substances		
-            .ui.basic.compact.button Environmental Permitting Regulations – Installations			
-        .twelve.wide.column.scrolling
+            +call_register k='waste-carriers-brokers' l='Waste Carriers, Brokers and Dealers'
+            +call_register k='waste-exemptions' l='Waste Exemptions'
+            +call_register k='scrap-metal-dealers' l='Scrap Metal Dealers'
+            +call_register k='water-discharge-exemptions' l='Water Quality Exemptions'
+            +call_register k='flood-risk-exemptions' l='Flood Risk Activity Exemptions'
+            +call_register k='enforcement-action' l='Enforcement Actions'
+            +call_register k='radioactive-substance' l='Radioactive Substances permits'
+            +call_register k='industrial-installations' l='Environmental Permitting Regulations - Installations'
+            +call_register k='waste-operations' l='Environmental Permitting Regulations - Waste Operations'
+            +call_register k='end-of-life-vehicles' l='Environmental Permitting Regulations - End of Life Vehicles'
+            +call_register k='water-discharges' l='Environmental Permitting Regulations - Discharge Consents'
+            each localities
+                .ui.compact.basic.button #{name} #{count}
+        .twelve.wide.column
+            // +field_filter
             .ui.icon.input
                 if sv 'name_query'
                     i.link.remove.icon.clear_name
@@ -34,8 +41,14 @@ template(name='ea')
                 else
                     i.hashtag.icon
                 input.search_number(type='text' placeholder='number')
-            each ea_docs
-                +ea_doc
+            .scrolling
+                each ea_docs
+                    +ea_doc
+     
+template(name='call_register')
+    .ui.small.basic.compact.button.call_ea
+        |#{l}
+     
                     
                     
 template(name='ea_doc')
@@ -64,7 +77,7 @@ template(name='ea_doc')
                 with site.siteAddress
                     .item #{address}
                     .item #{locality}
-                    .item #{organization_name}
+                    // .item #{organization_name}
                     .item #{postcode}
                     .item #{postcodeURI}
                     .item #{street_address}
