--- a/client/suser.jade
+++ b/client/suser.jade
@@ -30,6 +30,11 @@ template(name='suser_layout')
                     .ui.basic.label(class=sentiment_class) {{to_percent sentiment_avg}}% #{doc_sentiment_label}
                     +suser_top_emotions
                     div
+                    .ui.basic.green.label {{fixed0 rep_joy}} joy rep
+                    .ui.basic.blue.label {{fixed0 rep_sad}} sad rep
+                    .ui.basic.red.label {{fixed0 rep_anger}} anger rep
+                    .ui.basic.orange.label {{fixed0 rep_disgust}} disgust rep
+                    .ui.basic.grey.label {{fixed0 rep_fear}} fear rep
                     // .ui.green.label pos: {{to_percent sentiment_positive_avg}}%
                     // .ui.red.label neg: {{to_percent sentiment_negative_avg}}%
                     small #
