--- a/client/suser.jade
+++ b/client/suser.jade
@@ -27,14 +27,9 @@ template(name='suser_layout')
                         |!{display_name} 
                         small(title='reputation') {{ commafy reputation }}
                     div
-                    .ui.basic.label(class=sentiment_class) {{to_percent sentiment_avg}}% #{doc_sentiment_label}
+                    // .ui.basic.label(class=sentiment_class) {{to_percent sentiment_avg}}% #{doc_sentiment_label}
                     +suser_top_emotions
                     div
-                    .ui.basic.green.label {{fixed0 rep_joy}} joy rep
-                    .ui.basic.blue.label {{fixed0 rep_sad}} sad rep
-                    .ui.basic.red.label {{fixed0 rep_anger}} anger rep
-                    .ui.basic.orange.label {{fixed0 rep_disgust}} disgust rep
-                    .ui.basic.grey.label {{fixed0 rep_fear}} fear rep
                     // .ui.green.label pos: {{to_percent sentiment_positive_avg}}%
                     // .ui.red.label neg: {{to_percent sentiment_negative_avg}}%
                     small #
@@ -93,9 +88,19 @@ template(name='suser_layout')
 template(name='suser_top_emotions')
     .ui.basic.label {{ to_percent avg_sent_score}} sentiment
     .ui.basic.green.label {{ to_percent avg_joy_score}}% joyful
-    .ui.basic.red.label {{ to_percent avg_anger_score}}% angry
+    .ui.basic.green.label {{fixed0 rep_joy}} joy rep ##{site_joy_rep_rank}
+
+    .ui.basic.blue.label {{fixed0 rep_sad}} sad rep
     .ui.basic.blue.label {{ to_percent avg_sadness_score}}% sad
+
+    .ui.basic.red.label 
+        | {{ to_percent avg_anger_score}}% angry
+        | {{fixed0 rep_anger}} rep
+
+    .ui.basic.orange.label {{fixed0 rep_disgust}} disgust rep
     .ui.basic.orange.label {{ to_percent avg_disgust_score}}% disgusted
+
+    .ui.basic.grey.label {{fixed0 rep_fear}} fear rep
     .ui.basic.grey.label {{ to_percent avg_fear_score}}% fearful
 
                     
