--- a/client/suser.jade
+++ b/client/suser.jade
@@ -87,21 +87,25 @@ template(name='suser_layout')
                     
 template(name='suser_top_emotions')
     .ui.basic.label {{ to_percent avg_sent_score}} sentiment
-    .ui.basic.green.label {{ to_percent avg_joy_score}}% joyful
-    .ui.basic.green.label {{fixed0 rep_joy}} joy rep ##{site_joy_rep_rank}
+    .ui.green.small.header
+        | {{ to_percent avg_joy_score}}% joyful
+        | {{fixed0 rep_joy}} joy rep ##{site_joy_rep_rank}
 
-    .ui.basic.blue.label {{fixed0 rep_sad}} sad rep
-    .ui.basic.blue.label {{ to_percent avg_sadness_score}}% sad
+    .ui.blue.small.header
+        |{{fixed0 rep_sad}} sad rep
+        | {{ to_percent avg_sadness_score}}% sad ##{site_sadness_rep_rank}
 
-    .ui.basic.red.label 
+    .ui.red.small.header 
         | {{ to_percent avg_anger_score}}% angry
-        | {{fixed0 rep_anger}} rep
+        | {{fixed0 rep_anger}} rep ##{site_anger_rep_rank}
 
-    .ui.basic.orange.label {{fixed0 rep_disgust}} disgust rep
-    .ui.basic.orange.label {{ to_percent avg_disgust_score}}% disgusted
+    .ui.orange.small.header
+        |{{fixed0 rep_disgust}} disgust rep
+        | {{ to_percent avg_disgust_score}}% disgusted ##{site_disgust_rep_rank}
 
-    .ui.basic.grey.label {{fixed0 rep_fear}} fear rep
-    .ui.basic.grey.label {{ to_percent avg_fear_score}}% fearful
+    .ui.grey.small.header
+        |{{fixed0 rep_fear}} fear rep
+        | {{ to_percent avg_fear_score}}% fearful ##{site_fear_rep_rank}
 
                     
                     
