--- a/client/suser.jade
+++ b/client/suser.jade
@@ -53,10 +53,10 @@ template(name='suser_layout')
                         if question_count
                             a.item.say(href="/s/#{site}/u/#{user_id}/q" class="{{isActiveRoute regex='suser_q'}}")
                                 i.question.grey.icon
-                                |#{question_count} questions
+                                |{{commafy question_count}} questions
                         a.item.say(href="/s/#{site}/u/#{user_id}/a" class="{{isActiveRoute regex='suser_a'}}")
                             i.reply.grey.icon
-                            |#{answer_count} answers
+                            |{{commafy answer_count}} answers
                         a.item.say(href="/s/#{site}/u/#{user_id}/c" class="{{isActiveRoute regex='suser_c'}}")
                             i.chat.outline.grey.icon
                             |#{comment_count} comments
@@ -87,25 +87,25 @@ template(name='suser_layout')
                     
 template(name='suser_top_emotions')
     .ui.basic.label {{ to_percent avg_sent_score}} sentiment
-    .ui.green.small.header
+    .ui.green.basic.large.label
         | {{ to_percent avg_joy_score}}% joyful
-        | {{fixed0 rep_joy}} joy rep ##{site_joy_rep_rank}
+        | {{fixed0 rep_joy}} ##{site_joy_rep_rank}/##{global_joy_rep_rank}
 
-    .ui.blue.small.header
-        |{{fixed0 rep_sad}} sad rep
-        | {{ to_percent avg_sadness_score}}% sad ##{site_sadness_rep_rank}
+    .ui.blue.basic.large.label
+        |{{fixed0 rep_sadness}} sad rep
+        | {{ to_percent avg_sadness_score}}% ##{site_sadness_rep_rank}/##{global_sadness_rep_rank}
 
-    .ui.red.small.header 
+    .ui.red.basic.large.label 
         | {{ to_percent avg_anger_score}}% angry
-        | {{fixed0 rep_anger}} rep ##{site_anger_rep_rank}
+        | {{fixed0 rep_anger}} rep ##{site_anger_rep_rank}/##{global_anger_rep_rank}
 
-    .ui.orange.small.header
+    .ui.orange.basic.large.label
         |{{fixed0 rep_disgust}} disgust rep
-        | {{ to_percent avg_disgust_score}}% disgusted ##{site_disgust_rep_rank}
+        | {{ to_percent avg_disgust_score}}% ##{site_disgust_rep_rank}/##{global_disgust_rep_rank}
 
-    .ui.grey.small.header
+    .ui.grey.basic.large.label
         |{{fixed0 rep_fear}} fear rep
-        | {{ to_percent avg_fear_score}}% fearful ##{site_fear_rep_rank}
+        | {{ to_percent avg_fear_score}}% ##{site_fear_rep_rank}/##{global_fear_rep_rank}
 
                     
                     
@@ -143,26 +143,26 @@ template(name='suser_dash')
                     |#{website_url}
             strong rep change
             .ui.tertiary.button.say
-                |#{reputation_change_day} day
+                |{{commafy reputation_change_day}} day
             .ui.tertiary.button.say
-                |#{reputation_change_week} week
+                |{{commafy reputation_change_week}} week
             .ui.tertiary.button.say
-                |#{reputation_change_month} month
+                |{{commafy reputation_change_month}} month
             .ui.tertiary.button.say
-                |#{reputation_change_quarter} quarter
+                |{{commafy reputation_change_quarter}} quarter
             .ui.tertiary.button.say
-                |#{reputation_change_year} year
+                |{{commafy reputation_change_year}} year
             .ui.tertiary.button.say
-                |#{down_vote_count}
+                |{{commafy down_vote_count}}
                 i.thumbs.down.outline.icon
                 |down votes
             .ui.tertiary.button.say
                 i.thumbs.up.outline.icon
-                | #{up_vote_count}
+                | {{commafy up_vote_count}}
                 |up votes
             .ui.tertiary.button.say
                 i.eye.icon
-                | #{view_count}
+                | {{commafy view_count}}
                 |views
             .ui.inline.header 
                 |#{max_emotion_name} #{max_emotion_percent}
