--- a/client/subreddit.jade
+++ b/client/subreddit.jade
@@ -1,4 +1,4 @@
-template(name='subreddit_docs')
+template(name='subreddit')
     with subreddit_doc
         .ui.stackable.grid
             .row
@@ -152,16 +152,16 @@ template(name='subreddit_doc_item')
     .ui.item
         .image
             if is_image
-                a.view_post.zoomer(href="/s/#{subreddit}/post/#{_id}" class=post_header_class)
+                a.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                     img.ui.centered.image.toggle_view(src=url)
             else if watson.metadata.image
-                a.view_post.zoomer(href="/s/#{subreddit}/post/#{_id}" class=post_header_class)
+                a.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                     img.ui.rounded.image.toggle_view(src=watson.metadata.image)
             else
-                a.view_post.zoomer(href="/s/#{subreddit}/post/#{_id}" class=post_header_class)
+                a.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                     img(src=data.thumbnail)    
         .content
-            a.ui.inline.header.view_post.zoomer(href="/s/#{subreddit}/post/#{_id}" class=post_header_class)
+            a.ui.inline.header.view_post.zoomer(href="/r/#{subreddit}/post/#{_id}" class=post_header_class)
                 strong #{ups}
                 if is_answered
                     i.green.checkmark.icon
