decent rdata sub info pull, some r ux, show selftxt, init ruser temps

--- a/client/ruser.jade
+++ b/client/ruser.jade
@@ -1,5 +1,5 @@
 template(name='ruser')
-    unless stackuser_doc
+    unless ruser_doc
         // .ui.header no user found
         .ui.hidden.divider
         .ui.hidden.divider
@@ -9,7 +9,7 @@ template(name='ruser')
         // .ui.massive.fluid.circular.button.f17.zoomer.pointer.search 
         //     i.download.icon
             // |download user info
-    with stackuser_doc
+    with ruser_doc
         .ui.stackable.padded.grid
             .row
                 .five.wide.right.aligned.column
