--- a/client/nav.jade
+++ b/client/nav.jade
@@ -4,13 +4,13 @@ template(name='nav')
             // a.icon.zoomer.item.goto_vid(href='/vids' class="{{isActivePath regex='vids'}}" title='videos')
             //     i.large.video.grey.icon
             a.icon.zoomer.item.goto_ea(href='/ea' class="{{isActivePath regex='ea'}}" title='ea')
-                i.large.tree.icon
+                i.large.tree.grey.icon
                 // img(src="https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fmedia.glassdoor.com%2Fsqll%2F139670%2Fenvironment-agency-squarelogo.png&f=1&nofb=1")
             // a.icon.zoomer.item.goto_wiki(href='/wiki' class="{{isActivePath regex='wiki'}}" title='wikipedia')
             //     i.large.wikipedia.grey.icon
             a.icon.zoomer.item.goto_people(href='/people' class="{{isActivePath regex='people'}}" title='people')
                 i.large.user.outline.grey.icon
-            a.icon.zoomer.item.clear_tags.goto_stack(href='/stack' class="{{isActivePath '/stack'}}" title='stack exchange')
+            a.icon.zoomer.teal.item.clear_tags.goto_stack(href='/stack' class="{{isActivePath '/stack'}}" title='stack exchange')
                 i.large.stack.exchange.grey.icon
             a.icon.zoomer.item.clear_tags.goto_dao(href='/' class="{{isActivePath '/'}}" title='search')
                 if skv_is 'loading' true
@@ -21,7 +21,7 @@ template(name='nav')
             //     i.large.picture.grey.icon
             // a.icon.zoomer.item.goto_vid(href='/github' class="{{isActivePath regex='github'}}" title='github')
             //     i.large.grey.github.icon
-            a.icon.zoomer.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}" title='reddit')
+            a.icon.zoomer.red.item.clear_tags.goto_reddit(href='/reddit' class="{{isActiveRoute regex='reddit'}}" title='reddit')
                 i.large.reddit.grey.icon
             a.icon.zoomer.item.silence(href='#')
                 i.large.volume.mute.grey.icon
